CSCEXAM-1478 Fix some issues with shuffling options while copying